--- a/scss/themes/dark/variables/_body.scss
+++ b/scss/themes/dark/variables/_body.scss
@@ -2,16 +2,16 @@
 //
 // Settings for the `<body>` element.
 
-$body-dark-theme-bg:     $gray-dark-theme-base !default;
-$body-dark-theme-color:  #e1e1e1 !default;
+$body-bg__dt:     $gray-base__dt !default;
+$body-color__dt:  #e1e1e1 !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $body-theme-map: map-merge(
   $body-theme-map,
   (
     dark: (
-      "body-bg":     $body-dark-theme-bg,
-      "body-color":  $body-dark-theme-color
+      "body-bg":     $body-bg__dt,
+      "body-color":  $body-color__dt
     )
   )
 );
