--- a/scss/themes/dark/variables/components/_links.scss
+++ b/scss/themes/dark/variables/components/_links.scss
@@ -2,16 +2,16 @@
 //
 // Style anchor elements.
 
-$link-dark-theme-color:        $primary-50 !default;
-$link-dark-theme-hover-color:  darken($link-dark-theme-color, 15%) !default;
+$link-color__dt:        $primary-50 !default;
+$link-hover-color__dt:  darken($link-color__dt, 15%) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $link-theme-map: map-merge(
   $link-theme-map,
   (
     dark: (
-      "link-color":        $link-dark-theme-color,
-      "link-hover-color":  $link-dark-theme-hover-color
+      "link-color":        $link-color__dt,
+      "link-hover-color":  $link-hover-color__dt
     )
   )
 );
