--- a/scss/themes/dark/variables/components/_modals.scss
+++ b/scss/themes/dark/variables/components/_modals.scss
@@ -1,22 +1,22 @@
 // Modals
 
 // Dark theme
-$modal-dark-theme-content-color:         null !default;
-$modal-dark-theme-content-bg:            $gray-dark-theme-400 !default;
-$modal-dark-theme-content-border-color:  $gray-dark-theme-400 !default;
-$modal-dark-theme-header-border-color:   $gray-dark-theme-400 !default;
-$modal-dark-theme-footer-border-color:   $gray-dark-theme-400 !default;
+$modal-content-color__dt:         null !default;
+$modal-content-bg__dt:            $gray-400__dt !default;
+$modal-content-border-color__dt:  $gray-400__dt !default;
+$modal-header-border-color__dt:   $gray-400__dt !default;
+$modal-footer-border-color__dt:   $gray-400__dt !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $modal-theme-map: map-merge(
   $modal-theme-map,
   (
     dark: (
-      "modal-content-color":         $modal-dark-theme-content-color,
-      "modal-content-bg":            $modal-dark-theme-content-bg,
-      "modal-content-border-color":  $modal-dark-theme-content-border-color,
-      "modal-header-border-color":   $modal-dark-theme-header-border-color,
-      "modal-footer-border-color":   $modal-dark-theme-footer-border-color
+      "modal-content-color":         $modal-content-color__dt,
+      "modal-content-bg":            $modal-content-bg__dt,
+      "modal-content-border-color":  $modal-content-border-color__dt,
+      "modal-header-border-color":   $modal-header-border-color__dt,
+      "modal-footer-border-color":   $modal-footer-border-color__dt
     )
   ),
 );
