--- a/scss/themes/dark/variables/components/_subheader.scss
+++ b/scss/themes/dark/variables/components/_subheader.scss
@@ -2,40 +2,40 @@
 
 // Dark theme
 
-$subheader-dark-theme-bg:                     $gray-dark-theme-400 !default;
-$subheader-dark-theme-color:                  rgba($white, .75) !default;
-$subheader-dark-theme-border:                 ( bottom: 0 ) !default;
-$subheader-dark-theme-hover-color:            rgba($white, .9) !default;
-$subheader-dark-theme-active-color:           $white !default;
-$subheader-dark-theme-disabled-color:         rgba($white, .25) !default;
+$subheader-bg__dt:                     $gray-400__dt !default;
+$subheader-color__dt:                  rgba($white, .75) !default;
+$subheader-border__dt:                 ( bottom: 0 ) !default;
+$subheader-hover-color__dt:            rgba($white, .9) !default;
+$subheader-active-color__dt:           $white !default;
+$subheader-disabled-color__dt:         rgba($white, .25) !default;
 
-$subheader-dark-theme-variants-map: () !default;
+$subheader-variants-map__dt: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$subheader-dark-theme-variants-map: map-merge(
+$subheader-variants-map__dt: map-merge(
   (
     dark: (
-      "subheader-bg":                      $subheader-dark-theme-bg,
-      "subheader-color":                   $subheader-dark-theme-color,
-      "subheader-border":                  $subheader-dark-theme-border,
-      "subheader-hover-color":             $subheader-dark-theme-hover-color,
-      "subheader-active-color":            $subheader-dark-theme-active-color,
-      "subheader-disabled-color":          $subheader-dark-theme-disabled-color,
+      "subheader-bg":                      $subheader-bg__dt,
+      "subheader-color":                   $subheader-color__dt,
+      "subheader-border":                  $subheader-border__dt,
+      "subheader-hover-color":             $subheader-hover-color__dt,
+      "subheader-active-color":            $subheader-active-color__dt,
+      "subheader-disabled-color":          $subheader-disabled-color__dt,
     )
   ),
-  $subheader-dark-theme-variants-map
+  $subheader-variants-map__dt
 );
 
-$subheader-dark-theme-default-variant: "dark" !default;
-$subheader-dark-theme-variants: (
-  default:  $subheader-dark-theme-default-variant,
-  map:      $subheader-dark-theme-variants-map
+$subheader-default-variant__dt: "dark" !default;
+$subheader-variants__dt: (
+  default:  $subheader-default-variant__dt,
+  map:      $subheader-variants-map__dt
 ) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $subheader-theme-map: map-merge(
   $subheader-theme-map,
   (
-    dark:  $subheader-dark-theme-variants
+    dark:  $subheader-variants__dt
   )
 );
 
