--- a/scss/themes/dark/variables/apps/_email.scss
+++ b/scss/themes/dark/variables/apps/_email.scss
@@ -1,20 +1,20 @@
 // Email App
 
-$email-app-dark-theme-bg:                  $gray-dark-theme-600 !default;
-$email-app-dark-theme-border-color:        $border-dark-theme-color !default;
-$email-app-dark-theme-message-color:       $body-dark-theme-color !default;
-$email-app-dark-theme-message-read-color:  darken($body-dark-theme-color, 30%) !default;
-$email-app-dark-theme-message-body-color:  $body-dark-theme-color !default;
+$email-app-bg__dt:                  $gray-600__dt !default;
+$email-app-border-color__dt:        $border-color__dt !default;
+$email-app-message-color__dt:       $body-color__dt !default;
+$email-app-message-read-color__dt:  darken($body-color__dt, 30%) !default;
+$email-app-message-body-color__dt:  $body-color__dt !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $email-app-theme-map: map-merge(
   (
     dark: (
-      "email-app-bg":                  $email-app-dark-theme-bg,
-      "email-app-border-color":        $email-app-dark-theme-border-color,
-      "email-app-message-color":       $email-app-dark-theme-message-color,
-      "email-app-message-read-color":  $email-app-dark-theme-message-read-color,
-      "email-app-message-body-color":  $email-app-dark-theme-message-body-color
+      "email-app-bg":                  $email-app-bg__dt,
+      "email-app-border-color":        $email-app-border-color__dt,
+      "email-app-message-color":       $email-app-message-color__dt,
+      "email-app-message-read-color":  $email-app-message-read-color__dt,
+      "email-app-message-body-color":  $email-app-message-body-color__dt
     )
   ),
   $email-app-theme-map
