--- a/scss/themes/dark/variables/components/_breadcrumb.scss
+++ b/scss/themes/dark/variables/components/_breadcrumb.scss
@@ -1,20 +1,20 @@
 // Breadcrumbs
 
 // Dark theme
-$breadcrumb-dark-bg:             transparent !default;
-$breadcrumb-dark-border-color:   $component-dark-theme-bg !default;
-$breadcrumb-dark-divider-color:  $body-dark-theme-color !default;
-$breadcrumb-dark-active-color:   $gray-600 !default;
+$breadcrumb-bg__dt:             transparent !default;
+$breadcrumb-border-color__dt:   $component-bg__dt !default;
+$breadcrumb-divider-color__dt:  $body-color__dt !default;
+$breadcrumb-active-color__dt:   $gray-600 !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $breadcrumb-theme-map: map-merge(
   $breadcrumb-theme-map,
   (
     dark: (
-      "breadcrumb-bg":             $breadcrumb-dark-bg,
-      "breadcrumb-border-color":   $breadcrumb-dark-border-color,
-      "breadcrumb-divider-color":  $breadcrumb-dark-divider-color,
-      "breadcrumb-active-color":   $breadcrumb-dark-active-color
+      "breadcrumb-bg":             $breadcrumb-bg__dt,
+      "breadcrumb-border-color":   $breadcrumb-border-color__dt,
+      "breadcrumb-divider-color":  $breadcrumb-divider-color__dt,
+      "breadcrumb-active-color":   $breadcrumb-active-color__dt
     )
   )
 );
