--- a/scss/themes/dark/variables/components/_close.scss
+++ b/scss/themes/dark/variables/components/_close.scss
@@ -1,14 +1,14 @@
 // Default theme
-$close-dark-theme-color:        $white !default;
-$close-dark-theme-text-shadow:  0 1px 0 $black !default;
+$close-color__dt:        $white !default;
+$close-text-shadow__dt:  0 1px 0 $black !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $close-theme-map: map-merge(
   $close-theme-map,
   (
     default: (
-      "close-color":        $close-dark-theme-color,
-      "close-text-shadow":  $close-dark-theme-text-shadow
+      "close-color":        $close-color__dt,
+      "close-text-shadow":  $close-text-shadow__dt
     )
   )
 );
