--- a/scss/themes/dark/variables/components/_custom-forms.scss
+++ b/scss/themes/dark/variables/components/_custom-forms.scss
@@ -1,52 +1,52 @@
 // Dark Theme
 
-$custom-dark-theme-control-indicator-bg:            $input-dark-theme-bg !default;
-$custom-dark-theme-control-indicator-border-color:  rgba($black, .3) !default;
-$custom-dark-theme-control-indicator-disabled-bg:   $input-dark-theme-disabled-bg !default;
+$custom-control-indicator-bg__dt:            $input-bg__dt !default;
+$custom-control-indicator-border-color__dt:  rgba($black, .3) !default;
+$custom-control-indicator-disabled-bg__dt:   $input-disabled-bg__dt !default;
 
-$custom-dark-theme-control-label-disabled-color:  $gray-600 !default;
+$custom-control-label-disabled-color__dt:  $gray-600 !default;
 
-$custom-dark-theme-control-indicator-checked-color:         $component-dark-theme-active-color !default;
-$custom-dark-theme-control-indicator-checked-bg:            $component-dark-theme-active-bg !default;
-$custom-dark-theme-control-indicator-checked-disabled-bg:   rgba(theme-color("primary"), .5) !default;
-$custom-dark-theme-control-indicator-checked-border-color:  $custom-dark-theme-control-indicator-checked-bg !default;
+$custom-control-indicator-checked-color__dt:         $component-active-color__dt !default;
+$custom-control-indicator-checked-bg__dt:            $component-active-bg__dt !default;
+$custom-control-indicator-checked-disabled-bg__dt:   rgba(theme-color("primary"), .5) !default;
+$custom-control-indicator-checked-border-color__dt:  $custom-control-indicator-checked-bg__dt !default;
 
-$custom-dark-theme-control-indicator-focus-border-color:  $input-dark-theme-focus-border-color !default;
+$custom-control-indicator-focus-border-color__dt:  $input-focus-border-color__dt !default;
 
-$custom-dark-theme-control-indicator-active-color:         $component-dark-theme-active-color !default;
-$custom-dark-theme-control-indicator-active-bg:            lighten($component-dark-theme-active-bg, 35%) !default;
-$custom-dark-theme-control-indicator-active-border-color:  $custom-dark-theme-control-indicator-active-bg !default;
+$custom-control-indicator-active-color__dt:         $component-active-color__dt !default;
+$custom-control-indicator-active-bg__dt:            lighten($component-active-bg__dt, 35%) !default;
+$custom-control-indicator-active-border-color__dt:  $custom-control-indicator-active-bg__dt !default;
 
-$custom-dark-theme-checkbox-indicator-icon-checked:                url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'><path fill='#{$custom-dark-theme-control-indicator-checked-color}' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/></svg>") !default;
-$custom-dark-theme-checkbox-indicator-indeterminate-bg:            $component-dark-theme-active-bg !default;
-$custom-dark-theme-checkbox-indicator-indeterminate-color:         $custom-dark-theme-control-indicator-checked-color !default;
-$custom-dark-theme-checkbox-indicator-indeterminate-border-color:  $custom-dark-theme-checkbox-indicator-indeterminate-bg !default;
-$custom-dark-theme-checkbox-indicator-icon-indeterminate:          url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'><path stroke='#{$custom-dark-theme-checkbox-indicator-indeterminate-color}' d='M0 2h4'/></svg>") !default;
+$custom-checkbox-indicator-icon-checked__dt:                url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'><path fill='#{$custom-control-indicator-checked-color__dt}' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/></svg>") !default;
+$custom-checkbox-indicator-indeterminate-bg__dt:            $component-active-bg__dt !default;
+$custom-checkbox-indicator-indeterminate-color__dt:         $custom-control-indicator-checked-color__dt !default;
+$custom-checkbox-indicator-indeterminate-border-color__dt:  $custom-checkbox-indicator-indeterminate-bg__dt !default;
+$custom-checkbox-indicator-icon-indeterminate__dt:          url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'><path stroke='#{$custom-checkbox-indicator-indeterminate-color__dt}' d='M0 2h4'/></svg>") !default;
 
-$custom-dark-theme-radio-indicator-icon-checked:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'><circle r='3' fill='#{$custom-dark-theme-control-indicator-checked-color}'/></svg>") !default;
+$custom-radio-indicator-icon-checked__dt:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'><circle r='3' fill='#{$custom-control-indicator-checked-color__dt}'/></svg>") !default;
 
-$custom-dark-theme-select-color:               $input-dark-theme-color !default;
-$custom-dark-theme-select-disabled-color:      $gray-600 !default;
-$custom-dark-theme-select-bg:                  $input-dark-theme-bg !default;
-$custom-dark-theme-select-disabled-bg:         $input-dark-theme-disabled-bg !default;
-$custom-dark-theme-select-indicator-color:     $gray-800 !default;
-$custom-dark-theme-select-indicator:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='#{$custom-dark-theme-select-indicator-color}' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>") !default;
-$custom-dark-theme-select-background:          escape-svg($custom-dark-theme-select-indicator) no-repeat right $custom-select-padding-x center / $custom-select-bg-size !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
-$custom-dark-theme-select-border-color:        rgba($black, .3) !default;
-$custom-dark-theme-select-focus-border-color:  $input-dark-theme-focus-border-color !default;
+$custom-select-color__dt:               $input-color__dt !default;
+$custom-select-disabled-color__dt:      $gray-600 !default;
+$custom-select-bg__dt:                  $input-bg__dt !default;
+$custom-select-disabled-bg__dt:         $input-disabled-bg__dt !default;
+$custom-select-indicator-color__dt:     $gray-800 !default;
+$custom-select-indicator__dt:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='#{$custom-select-indicator-color__dt}' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>") !default;
+$custom-select-background__dt:          escape-svg($custom-select-indicator__dt) no-repeat right $custom-select-padding-x center / $custom-select-bg-size !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+$custom-select-border-color__dt:        rgba($black, .3) !default;
+$custom-select-focus-border-color__dt:  $input-focus-border-color__dt !default;
 
-$custom-dark-theme-range-track-bg:           $gray-300 !default;
-$custom-dark-theme-range-thumb-bg:           $component-dark-theme-active-bg !default;
-$custom-dark-theme-range-thumb-active-bg:    lighten($component-dark-theme-active-bg, 35%) !default;
-$custom-dark-theme-range-thumb-disabled-bg:  $gray-500 !default;
+$custom-range-track-bg__dt:           $gray-300 !default;
+$custom-range-thumb-bg__dt:           $component-active-bg__dt !default;
+$custom-range-thumb-active-bg__dt:    lighten($component-active-bg__dt, 35%) !default;
+$custom-range-thumb-disabled-bg__dt:  $gray-500 !default;
 
-$custom-dark-theme-file-focus-border-color:  $input-dark-theme-focus-border-color !default;
-$custom-dark-theme-file-disabled-bg:         $input-dark-theme-disabled-bg !default;
-$custom-dark-theme-file-color:               $input-dark-theme-color !default;
-$custom-dark-theme-file-bg:                  $input-dark-theme-bg !default;
-$custom-dark-theme-file-border-color:        rgba($black, .3) !default;
-$custom-dark-theme-file-button-color:        $custom-dark-theme-file-color !default;
-$custom-dark-theme-file-button-bg:           $input-group-addon-dark-theme-bg !default;
+$custom-file-focus-border-color__dt:  $input-focus-border-color__dt !default;
+$custom-file-disabled-bg__dt:         $input-disabled-bg__dt !default;
+$custom-file-color__dt:               $input-color__dt !default;
+$custom-file-bg__dt:                  $input-bg__dt !default;
+$custom-file-border-color__dt:        rgba($black, .3) !default;
+$custom-file-button-color__dt:        $custom-file-color__dt !default;
+$custom-file-button-bg__dt:           $input-group-addon-bg__dt !default;
 
 
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -54,44 +54,44 @@ $custom-forms-theme-map: map-merge(
   $custom-forms-theme-map,
   (
     dark: (
-      "custom-control-indicator-bg":                           $custom-dark-theme-control-indicator-bg,
-      "custom-control-indicator-border-color":                 $custom-dark-theme-control-indicator-border-color,
-      "custom-control-indicator-disabled-bg":                  $custom-dark-theme-control-indicator-disabled-bg,
-      "custom-control-label-disabled-color":                   $custom-dark-theme-control-label-disabled-color,
-      "custom-control-indicator-checked-color":                $custom-dark-theme-control-indicator-checked-color,
-      "custom-control-indicator-checked-bg":                   $custom-dark-theme-control-indicator-checked-bg,
-      "custom-control-indicator-checked-disabled-bg":          $custom-dark-theme-control-indicator-checked-disabled-bg,
-      "custom-control-indicator-checked-border-color":         $custom-dark-theme-control-indicator-checked-border-color,
-      "custom-control-indicator-focus-border-color":           $custom-dark-theme-control-indicator-focus-border-color,
-      "custom-control-indicator-active-color":                 $custom-dark-theme-control-indicator-active-color,
-      "custom-control-indicator-active-bg":                    $custom-dark-theme-control-indicator-active-bg,
-      "custom-control-indicator-active-border-color":          $custom-dark-theme-control-indicator-active-border-color,
-      "custom-checkbox-indicator-icon-checked":                $custom-dark-theme-checkbox-indicator-icon-checked,
-      "custom-checkbox-indicator-indeterminate-bg":            $custom-dark-theme-checkbox-indicator-indeterminate-bg,
-      "custom-checkbox-indicator-indeterminate-color":         $custom-dark-theme-checkbox-indicator-indeterminate-color,
-      "custom-checkbox-indicator-indeterminate-border-color":  $custom-dark-theme-checkbox-indicator-indeterminate-border-color,
-      "custom-checkbox-indicator-icon-indeterminate":          $custom-dark-theme-checkbox-indicator-icon-indeterminate,
-      "custom-radio-indicator-icon-checked":                   $custom-dark-theme-radio-indicator-icon-checked,
-      "custom-select-color":                                   $custom-dark-theme-select-color,
-      "custom-select-disabled-color":                          $custom-dark-theme-select-disabled-color,
-      "custom-select-bg":                                      $custom-dark-theme-select-bg,
-      "custom-select-disabled-bg":                             $custom-dark-theme-select-disabled-bg,
-      "custom-select-indicator-color":                         $custom-dark-theme-select-indicator-color,
-      "custom-select-indicator":                               $custom-dark-theme-select-indicator,
-      "custom-select-background":                              $custom-dark-theme-select-background,
-      "custom-select-border-color":                            $custom-dark-theme-select-border-color,
-      "custom-select-focus-border-color":                      $custom-dark-theme-select-focus-border-color,
-      "custom-range-track-bg":                                 $custom-dark-theme-range-track-bg,
-      "custom-range-thumb-bg":                                 $custom-dark-theme-range-thumb-bg,
-      "custom-range-thumb-active-bg":                          $custom-dark-theme-range-thumb-active-bg,
-      "custom-range-thumb-disabled-bg":                        $custom-dark-theme-range-thumb-disabled-bg,
-      "custom-file-focus-border-color":                        $custom-dark-theme-file-focus-border-color,
-      "custom-file-disabled-bg":                               $custom-dark-theme-file-disabled-bg,
-      "custom-file-color":                                     $custom-dark-theme-file-color,
-      "custom-file-bg":                                        $custom-dark-theme-file-bg,
-      "custom-file-border-color":                              $custom-dark-theme-file-border-color,
-      "custom-file-button-color":                              $custom-dark-theme-file-button-color,
-      "custom-file-button-bg":                                 $custom-dark-theme-file-button-bg
+      "custom-control-indicator-bg":                           $custom-control-indicator-bg__dt,
+      "custom-control-indicator-border-color":                 $custom-control-indicator-border-color__dt,
+      "custom-control-indicator-disabled-bg":                  $custom-control-indicator-disabled-bg__dt,
+      "custom-control-label-disabled-color":                   $custom-control-label-disabled-color__dt,
+      "custom-control-indicator-checked-color":                $custom-control-indicator-checked-color__dt,
+      "custom-control-indicator-checked-bg":                   $custom-control-indicator-checked-bg__dt,
+      "custom-control-indicator-checked-disabled-bg":          $custom-control-indicator-checked-disabled-bg__dt,
+      "custom-control-indicator-checked-border-color":         $custom-control-indicator-checked-border-color__dt,
+      "custom-control-indicator-focus-border-color":           $custom-control-indicator-focus-border-color__dt,
+      "custom-control-indicator-active-color":                 $custom-control-indicator-active-color__dt,
+      "custom-control-indicator-active-bg":                    $custom-control-indicator-active-bg__dt,
+      "custom-control-indicator-active-border-color":          $custom-control-indicator-active-border-color__dt,
+      "custom-checkbox-indicator-icon-checked":                $custom-checkbox-indicator-icon-checked__dt,
+      "custom-checkbox-indicator-indeterminate-bg":            $custom-checkbox-indicator-indeterminate-bg__dt,
+      "custom-checkbox-indicator-indeterminate-color":         $custom-checkbox-indicator-indeterminate-color__dt,
+      "custom-checkbox-indicator-indeterminate-border-color":  $custom-checkbox-indicator-indeterminate-border-color__dt,
+      "custom-checkbox-indicator-icon-indeterminate":          $custom-checkbox-indicator-icon-indeterminate__dt,
+      "custom-radio-indicator-icon-checked":                   $custom-radio-indicator-icon-checked__dt,
+      "custom-select-color":                                   $custom-select-color__dt,
+      "custom-select-disabled-color":                          $custom-select-disabled-color__dt,
+      "custom-select-bg":                                      $custom-select-bg__dt,
+      "custom-select-disabled-bg":                             $custom-select-disabled-bg__dt,
+      "custom-select-indicator-color":                         $custom-select-indicator-color__dt,
+      "custom-select-indicator":                               $custom-select-indicator__dt,
+      "custom-select-background":                              $custom-select-background__dt,
+      "custom-select-border-color":                            $custom-select-border-color__dt,
+      "custom-select-focus-border-color":                      $custom-select-focus-border-color__dt,
+      "custom-range-track-bg":                                 $custom-range-track-bg__dt,
+      "custom-range-thumb-bg":                                 $custom-range-thumb-bg__dt,
+      "custom-range-thumb-active-bg":                          $custom-range-thumb-active-bg__dt,
+      "custom-range-thumb-disabled-bg":                        $custom-range-thumb-disabled-bg__dt,
+      "custom-file-focus-border-color":                        $custom-file-focus-border-color__dt,
+      "custom-file-disabled-bg":                               $custom-file-disabled-bg__dt,
+      "custom-file-color":                                     $custom-file-color__dt,
+      "custom-file-bg":                                        $custom-file-bg__dt,
+      "custom-file-border-color":                              $custom-file-border-color__dt,
+      "custom-file-button-color":                              $custom-file-button-color__dt,
+      "custom-file-button-bg":                                 $custom-file-button-bg__dt
     )
   )
 );
