--- a/scss/themes/dark/variables/components/_header.scss
+++ b/scss/themes/dark/variables/components/_header.scss
@@ -2,64 +2,64 @@
 
 // Dark theme
 
-$header-dark-theme-bg:                     $gray-dark-theme-400 !default;
-$header-dark-theme-color:                  rgba($white, .75) !default;
-$header-dark-theme-border:                 ( bottom: 0 ) !default;
-$header-dark-theme-hover-color:            rgba($white, .9) !default;
-$header-dark-theme-active-color:           $white !default;
-$header-dark-theme-disabled-color:         rgba($white, .25) !default;
-$header-dark-theme-toggler-icon-bg:        str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$header-dark-theme-color}' stroke-width='2.25' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
-$header-dark-theme-toggler-hover-icon-bg:  str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$header-dark-theme-hover-color}' stroke-width='2.25' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
-$header-dark-theme-toggler-border-color:   rgba($white, .1) !default;
+$header-bg__dt:                     $gray-400__dt !default;
+$header-color__dt:                  rgba($white, .75) !default;
+$header-border__dt:                 ( bottom: 0 ) !default;
+$header-hover-color__dt:            rgba($white, .9) !default;
+$header-active-color__dt:           $white !default;
+$header-disabled-color__dt:         rgba($white, .25) !default;
+$header-toggler-icon-bg__dt:        str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$header-color__dt}' stroke-width='2.25' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
+$header-toggler-hover-icon-bg__dt:  str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$header-hover-color__dt}' stroke-width='2.25' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
+$header-toggler-border-color__dt:   rgba($white, .1) !default;
 
-$header-dark-theme-brand-bg:                transparent !default;
-$header-dark-theme-brand-border:            0 !default;
-$header-dark-theme-brand-color:             $header-dark-theme-active-color !default;
-$header-dark-theme-brand-hover-color:       $header-dark-theme-active-color !default;
-$header-dark-theme-brand-minimized-bg:      transparent !default;
-$header-dark-theme-brand-minimized-border:  0 !default;
+$header-brand-bg__dt:                transparent !default;
+$header-brand-border__dt:            0 !default;
+$header-brand-color__dt:             $header-active-color__dt !default;
+$header-brand-hover-color__dt:       $header-active-color__dt !default;
+$header-brand-minimized-bg__dt:      transparent !default;
+$header-brand-minimized-border__dt:  0 !default;
 
-$subheader-dark-theme-separator:            1px solid $border-dark-theme-color !default;
+$subheader-separator__dt:            1px solid $border-color__dt !default;
 
 
-$header-dark-theme-variants-map: () !default;
+$header-variants-map__dt: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$header-dark-theme-variants-map: map-merge(
+$header-variants-map__dt: map-merge(
   (
     dark: (
-      "header-bg":                      $header-dark-theme-bg,
-      "header-color":                   $header-dark-theme-color,
-      "header-border":                  $header-dark-theme-border,
+      "header-bg":                      $header-bg__dt,
+      "header-color":                   $header-color__dt,
+      "header-border":                  $header-border__dt,
       "dark-theme-header-border":       0,
-      "header-hover-color":             $header-dark-theme-hover-color,
-      "header-active-color":            $header-dark-theme-active-color,
-      "header-disabled-color":          $header-dark-theme-disabled-color,
-      "header-toggler-icon-bg":         $header-dark-theme-toggler-icon-bg,
-      "header-toggler-hover-icon-bg":   $header-dark-theme-toggler-hover-icon-bg,
-      "header-toggler-border-color":    $header-dark-theme-toggler-border-color,
-      "header-brand-bg":                $header-dark-theme-brand-bg,
-      "header-brand-border":            $header-dark-theme-brand-border,
-      "header-brand-color":             $header-dark-theme-brand-color,
-      "header-brand-hover-color":       $header-dark-theme-brand-hover-color,
-      "header-brand-minimized-bg":      $header-dark-theme-brand-minimized-bg,
-      "header-brand-minimized-border":  $header-dark-theme-brand-minimized-border,
-      "subheader-separator":            $subheader-dark-theme-separator
+      "header-hover-color":             $header-hover-color__dt,
+      "header-active-color":            $header-active-color__dt,
+      "header-disabled-color":          $header-disabled-color__dt,
+      "header-toggler-icon-bg":         $header-toggler-icon-bg__dt,
+      "header-toggler-hover-icon-bg":   $header-toggler-hover-icon-bg__dt,
+      "header-toggler-border-color":    $header-toggler-border-color__dt,
+      "header-brand-bg":                $header-brand-bg__dt,
+      "header-brand-border":            $header-brand-border__dt,
+      "header-brand-color":             $header-brand-color__dt,
+      "header-brand-hover-color":       $header-brand-hover-color__dt,
+      "header-brand-minimized-bg":      $header-brand-minimized-bg__dt,
+      "header-brand-minimized-border":  $header-brand-minimized-border__dt,
+      "subheader-separator":            $subheader-separator__dt
     )
   ),
-  $header-dark-theme-variants-map
+  $header-variants-map__dt
 );
 
-$header-dark-theme-default-variant: "dark" !default;
-$header-dark-theme-variants: (
-  default:  $header-dark-theme-default-variant,
-  map:      $header-dark-theme-variants-map
+$header-default-variant__dt: "dark" !default;
+$header-variants__dt: (
+  default:  $header-default-variant__dt,
+  map:      $header-variants-map__dt
 ) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $header-theme-map: map-merge(
   $header-theme-map,
   (
-    dark:  $header-dark-theme-variants
+    dark:  $header-variants__dt
   )
 );
 
