--- a/scss/themes/dark/variables/components/_jumbotron.scss
+++ b/scss/themes/dark/variables/components/_jumbotron.scss
@@ -2,16 +2,16 @@
 // Jumbotron
 
 // Dark theme
-$jumbotron-dark-theme-color:  null !default;
-$jumbotron-dark-theme-bg:     $gray-900 !default;
+$jumbotron-color__dt:  null !default;
+$jumbotron-bg__dt:     $gray-900 !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $jumbotron-theme-map: map-merge(
   $jumbotron-theme-map,
   (
     dark: (
-      "jumbotron-color":  $jumbotron-dark-theme-color,
-      "jumbotron-bg":     $jumbotron-dark-theme-bg
+      "jumbotron-color":  $jumbotron-color__dt,
+      "jumbotron-bg":     $jumbotron-bg__dt
     )
   )
 );
