--- a/scss/themes/dark/variables/components/_navbar.scss
+++ b/scss/themes/dark/variables/components/_navbar.scss
@@ -1,63 +1,63 @@
 
 // Navbar
 
-$navbar-dark-theme-dark-color:                 rgba($white, .5) !default;
-$navbar-dark-theme-dark-hover-color:           rgba($white, .75) !default;
-$navbar-dark-theme-dark-active-color:          $white !default;
-$navbar-dark-theme-dark-disabled-color:        rgba($white, .25) !default;
-$navbar-dark-theme-dark-toggler-icon-bg:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-theme-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
-$navbar-dark-theme-dark-toggler-border-color:  rgba($white, .1) !default;
+$navbar-dark-color__dt:                 rgba($white, .5) !default;
+$navbar-dark-hover-color__dt:           rgba($white, .75) !default;
+$navbar-dark-active-color__dt:          $white !default;
+$navbar-dark-disabled-color__dt:        rgba($white, .25) !default;
+$navbar-dark-toggler-icon-bg__dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color__dt}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
+$navbar-dark-toggler-border-color__dt:  rgba($white, .1) !default;
 
-$navbar-dark-theme-light-color:                 rgba($black, .5) !default;
-$navbar-dark-theme-light-hover-color:           rgba($black, .7) !default;
-$navbar-dark-theme-light-active-color:          rgba($black, .9) !default;
-$navbar-dark-theme-light-disabled-color:        rgba($black, .3) !default;
-$navbar-dark-theme-light-toggler-icon-bg:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-theme-light-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
-$navbar-dark-theme-light-toggler-border-color:  rgba($black, .1) !default;
+$navbar-light-color__dt:                 rgba($black, .5) !default;
+$navbar-light-hover-color__dt:           rgba($black, .7) !default;
+$navbar-light-active-color__dt:          rgba($black, .9) !default;
+$navbar-light-disabled-color__dt:        rgba($black, .3) !default;
+$navbar-light-toggler-icon-bg__dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$navbar-light-color__dt}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
+$navbar-light-toggler-border-color__dt:  rgba($black, .1) !default;
 
-$navbar-dark-theme-light-brand-color:        $navbar-dark-theme-light-active-color !default;
-$navbar-dark-theme-light-brand-hover-color:  $navbar-dark-theme-light-active-color !default;
-$navbar-dark-theme-dark-brand-color:         $navbar-dark-theme-dark-active-color !default;
-$navbar-dark-theme-dark-brand-hover-color:   $navbar-dark-theme-dark-active-color !default;
+$navbar-light-brand-color__dt:        $navbar-light-active-color__dt !default;
+$navbar-light-brand-hover-color__dt:  $navbar-light-active-color__dt !default;
+$navbar-dark-brand-color__dt:         $navbar-dark-active-color__dt !default;
+$navbar-dark-brand-hover-color__dt:   $navbar-dark-active-color__dt !default;
 
-$navbar-dark-theme-variants-map: () !default;
+$navbar-variants-map__dt: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
-$navbar-dark-theme-variants-map: map-merge(
+$navbar-variants-map__dt: map-merge(
   (
     dark: (
-      "navbar-color":                 $navbar-dark-theme-dark-color,
-      "navbar-hover-color":           $navbar-dark-theme-dark-hover-color,
-      "navbar-active-color":          $navbar-dark-theme-dark-active-color,
-      "navbar-disabled-color":        $navbar-dark-theme-dark-disabled-color,
-      "navbar-toggler-icon-bg":       $navbar-dark-theme-dark-toggler-icon-bg,
-      "navbar-toggler-border-color":  $navbar-dark-theme-dark-toggler-border-color,
-      "navbar-brand-color":           $navbar-dark-theme-dark-brand-color,
-      "navbar-brand-hover-color":     $navbar-dark-theme-dark-brand-hover-color
+      "navbar-color":                 $navbar-dark-color__dt,
+      "navbar-hover-color":           $navbar-dark-hover-color__dt,
+      "navbar-active-color":          $navbar-dark-active-color__dt,
+      "navbar-disabled-color":        $navbar-dark-disabled-color__dt,
+      "navbar-toggler-icon-bg":       $navbar-dark-toggler-icon-bg__dt,
+      "navbar-toggler-border-color":  $navbar-dark-toggler-border-color__dt,
+      "navbar-brand-color":           $navbar-dark-brand-color__dt,
+      "navbar-brand-hover-color":     $navbar-dark-brand-hover-color__dt
     ),
     light: (
-      "navbar-color":                 $navbar-dark-theme-light-color,
-      "navbar-hover-color":           $navbar-dark-theme-light-hover-color,
-      "navbar-active-color":          $navbar-dark-theme-light-active-color,
-      "navbar-disabled-color":        $navbar-dark-theme-light-disabled-color,
-      "navbar-toggler-icon-bg":       $navbar-dark-theme-light-toggler-icon-bg,
-      "navbar-toggler-border-color":  $navbar-dark-theme-light-toggler-border-color,
-      "navbar-brand-color":           $navbar-dark-theme-light-brand-color,
-      "navbar-brand-hover-color":     $navbar-dark-theme-light-brand-hover-color
+      "navbar-color":                 $navbar-light-color__dt,
+      "navbar-hover-color":           $navbar-light-hover-color__dt,
+      "navbar-active-color":          $navbar-light-active-color__dt,
+      "navbar-disabled-color":        $navbar-light-disabled-color__dt,
+      "navbar-toggler-icon-bg":       $navbar-light-toggler-icon-bg__dt,
+      "navbar-toggler-border-color":  $navbar-light-toggler-border-color__dt,
+      "navbar-brand-color":           $navbar-light-brand-color__dt,
+      "navbar-brand-hover-color":     $navbar-light-brand-hover-color__dt
     )
   ),
-  $navbar-dark-theme-variants-map
+  $navbar-variants-map__dt
 );
 
-$navbar-dark-theme-default-variant: null !default;
-$navbar-dark-theme-variants: (
-  default:  $navbar-dark-theme-default-variant,
-  map:      $navbar-dark-theme-variants-map
+$navbar-default-variant__dt: null !default;
+$navbar-variants__dt: (
+  default:  $navbar-default-variant__dt,
+  map:      $navbar-variants-map__dt
 ) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $navbar-theme-map: map-merge(
   $navbar-theme-map,
   (
-    default:  $navbar-dark-theme-variants
+    default:  $navbar-variants__dt
   )
 );
