--- a/scss/themes/dark/variables/components/_progress-bars.scss
+++ b/scss/themes/dark/variables/components/_progress-bars.scss
@@ -1,18 +1,18 @@
 // Progress bars
 
 // Dark theme
-$progress-dark-theme-bg:         $gray-700 !default;
-$progress-dark-theme-bar-color:  $white !default;
-$progress-dark-theme-bar-bg:     theme-color("primary") !default;
+$progress-bg__dt:         $gray-700 !default;
+$progress-bar-color__dt:  $white !default;
+$progress-bar-bg__dt:     theme-color("primary") !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $progress-theme-map: map-merge(
   $progress-theme-map,
   (
     dark: (
-      "progress-bg":         $progress-dark-theme-bg,
-      "progress-bar-color":  $progress-dark-theme-bar-color,
-      "progress-bar-bg":     $progress-dark-theme-bar-bg
+      "progress-bg":         $progress-bg__dt,
+      "progress-bar-color":  $progress-bar-color__dt,
+      "progress-bar-bg":     $progress-bar-bg__dt
     )
   )
 );
