--- a/scss/themes/dark/variables/components/_shared.scss
+++ b/scss/themes/dark/variables/components/_shared.scss
@@ -4,20 +4,20 @@
 //
 // Define common padding and border radius sizes and more.
 
-$border-dark-theme-color: $gray-dark-theme-900 !default;
+$border-color__dt: $gray-900__dt !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $border-theme-map: map-merge(
   $border-theme-map,
   (
     dark: (
-      "border-color":  $border-dark-theme-color
+      "border-color":  $border-color__dt
     )
   ),
 );
 
-$component-dark-theme-color:  $body-dark-theme-color !default;
-$component-dark-theme-bg:     $gray-dark-theme-800 !default;
+$component-color__dt:  $body-color__dt !default;
+$component-bg__dt:     $gray-800__dt !default;
 
-$component-dark-theme-active-color:  $black !default;
-$component-dark-theme-active-bg:     $primary-50 !default;
+$component-active-color__dt:  $black !default;
+$component-active-bg__dt:     $primary-50 !default;
